tests/errors/substructural/composition/nested_copy_struct_with_non_copy_field.err.expected
error: at 3:34: [COMP-CopyMarkerNotSatisfied] In struct 'Outer' (marked Copy), field 'inner' has type Linear which is not Copy
   |
 3 |             struct Outer: Copy { inner: Linear }
   |                                  ^^^^^^^^^^^^^
